--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@ show_reading_time: false
     >
       View Schedule
     </button>
+
+    <button
+    id="side1"
+    onclick="window.location.href='/neptune_frontend/sports'"
+    class="side-btn"
+  >
+    View Sports
+  </button>
+
     <button
       id="side2"
       onclick="window.location.href='/neptune_frontend/astronet'"
@@ -63,7 +72,220 @@ show_reading_time: false
   <img src="navigation/images/dnhs_logo.png" alt="DNHS" />
 </div>
 
-<link rel="stylesheet" href="red.css"> 
+<style>
+  .sidebar {
+    width: 200px;
+    background: #222;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 70px;
+    left: 20px;
+  }
+
+  .sidebar h3 {
+    color: #00e5ff;
+  }
+
+  .sidebar1 {
+    width: 200px;
+    background: #222;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 70px;
+    right: 20px;
+  }
+
+  .sidebar1 h3 {
+    color: #00e5ff;
+  }
+
+  .rulebar {
+    width: 200px;
+    height: 80px;
+    background: #000000;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 650px;
+    left: 20px;
+  }
+
+  .logo {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+  }
+
+  .friend-btn {
+    display: block;
+    background: #00e5ff;
+    color: #fff;
+    padding: 0.5rem;
+    margin: 0.5rem 0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+
+  .new-friend-btn {
+    display: block;
+    background: #00e5ff;
+    color: #fff;
+    padding: 0.5rem;
+    margin: 0.5rem 0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+
+  .rule-btn {
+    display: block;
+    background: #00e5ff;
+    color: #fff;
+    width: 166px;
+    padding: 0.5rem;
+    margin: 0.5rem 0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+
+  .friend-btn:hover {
+    background: #0099cc;
+  }
+
+  .new-friend-btn:hover {
+    background: #0099cc;
+  }
+
+  body {
+    font-family: "Roboto", sans-serif;
+    background: linear-gradient(to right, #013b54, #4b1f30);
+    color: #fff;
+    margin: 0;
+    /* Remove default margin */
+    min-height: 100vh;
+    /* Ensure the body takes full height */
+    display: flex;
+    flex-direction: column;
+  }
+
+  .modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  .modal-content {
+    background-color: #333;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 600px;
+    text-align: center;
+  }
+
+  .container {
+    max-width: 800px;
+    margin: auto;
+    text-align: center;
+    padding: 2rem;
+    background: rgba(26, 26, 26, 0.9);
+    /* Slightly transparent to see the background */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+    color: #00e5ff;
+    text-align: center;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .side-btn,
+  .submit-btn,
+  .acknowledge-btn {
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    color: #fff;
+    transition: background 0.3s ease;
+    background: linear-gradient(45deg, #00e5ff, #0099cc);
+    border-radius: 10px;
+  }
+
+  .side-btn:hover {
+    background: linear-gradient(45deg, #0099cc, #006699);
+  }
+
+  #argument-input {
+    width: 100%;
+    height: 100px;
+    border: 2px solid #00e5ff;
+    border-radius: 10px;
+    background: #0a0a0a;
+    color: #fff;
+    padding: 1rem;
+    resize: none;
+    margin-bottom: 1rem;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+
+  li {
+    background: #1a1a1a;
+    margin: 1rem 0;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  li .rate {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .rate button {
+    background: none;
+    border: none;
+    font-size: 1.2rem;
+    color: #00e5ff;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+
+  .hidden {
+    display: none;
+  }
+</style>
 
 <div id="bubble-container"></div>
 ;
