--- a/sports.html
+++ b/sports.html
@@ -129,7 +129,7 @@ function displaySport(sportData) {
 }
 
 // Fetch and display existing classes from the backend
-fetch(`${pythonURI}/api/sports`, { 
+fetch(`${pythonURI}/api/sports/add`, { 
     ...fetchOptions, 
     method: "GET" 
 })
