--- a/navigation/theme.html
+++ b/navigation/theme.html
@@ -34,7 +34,7 @@ show_reading_time: false
             <tr>
                 <td>Add</td>
                 <td><input type="text" id="addTheme" placeholder="Enter Theme"></td>
-                <td><input type="text" id="addCSS" placeholder="Enter CSS"></td>
+                <td><input type="text" id="addCSS"></td>
                 <td><button class="action-button" onclick="addTheme()">Add</button></td>
             </tr>
             <tr>
@@ -68,7 +68,7 @@ window.addTheme = async function () {
     const css = document.getElementById("addCSS").value;
 
     try {
-        const response = await fetch(`${pythonURI}/api/css/add`, {
+        const response = await fetch(`${pythonURI}/api/css/crud`, {
             ...fetchOptions,
             method: "POST",
             body: JSON.stringify({ theme, css })
@@ -92,7 +92,7 @@ window.updateTheme = async function () {
     const css = document.getElementById("updateCSS").value;
 
     try {
-        const response = await fetch(`${pythonURI}/api/css/update`, {
+        const response = await fetch(`${pythonURI}/api/css/crud`, {
             ...fetchOptions,
             method: "PUT",
             body: JSON.stringify({ theme, css })
@@ -140,7 +140,7 @@ window.deleteTheme = async function () {
     const theme = document.getElementById("deleteTheme").value;
 
     try {
-        const response = await fetch(`${pythonURI}/api/css/delete`, {
+        const response = await fetch(`${pythonURI}/api/css/crud`, {
             ...fetchOptions,
             method: "DELETE",
             body: JSON.stringify({ theme })
